# RSMT_Steiner

./: CMakeLists.txt  README.md  compare-logs.py  main.cpp  test_all.bat  viz.py
dat/: 0005_0000.json  0005_0000_out.json  0005_0000_out_out.json  0006_0000.json  0006_0000_out.json  0007_0000.json  0007_0000_out.json  0008_0000.json  0008_0000_out.json  0009_0000.json  0009_0000_out.json  0010_0000.json  0010_0000_out.json  0011_0000.json  0011_0000_out.json  0012_0000.json  0012_0000_out.json  0013_0000.json  0013_0000_out.json  0014_0000.json  0014_0000_out.json  0015_0000.json  0015_0000_out.json  0016_0000.json  0016_0000_out.json  0017_0000.json  0017_0000_out.json  0018_0000.json  0018_0000_out.json  0019_0000.json  0019_0000_out.json  0020_0000.json  0020_0000_out.json  0021_0000.json  0021_0000_out.json  0022_0000.json  0022_0000_out.json  0023_0000.json  0023_0000_out.json  0024_0000.json  (+38 more)
